Changing config.inc.php variables into constants, preparing for translation, works!

--- a/README
+++ b/README
@@ -5,7 +5,7 @@
 
 ## Error
 
-	> double <player> tag in highscores.xml (not solved yet) ++ write.inc.php (seems solved ) // wait, pending
+	> none
 
 ## Hints
 
