add some new functionallity like ip-test for one playing, stable working

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ## To do
 
-        > evaluation page to highscore page
-        > show highscore page
+        > show only the 10 last best scores
+        > use german and english
 
 ## Error
 
