--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 ## To do
 
-        > show only the 10 last best scores
-        > use german and english
+        > more Questions
 
 ## Error
 
@@ -11,3 +10,8 @@
 
         > none
 	
+
+# How to work with
+
+Main files for all content are stored in the "dbase" folder. It contains the xml files for questions in german and english. Further languages you can simply add by changing the code for more languages.
+Further you can change the text Messessages and pathes in the "inc" folder where stored the config.inc.php this file contains all constants in kind of strings for messages and pathes.
