changing score limit, updating README, adding index.php files for folders

--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 ## To do
 
-        > CSS evaluation, form
-        > more Questions
+        > none
 
 ## Error
 
@@ -16,3 +15,7 @@
 
 Main files for all content are stored in the "dbase" folder. It contains the xml files for questions in german and english. Further languages you can simply add by changing the code for more languages.
 Further you can change the text Messessages and pathes in the "inc" folder where stored the config.inc.php this file contains all constants in kind of strings for messages and pathes.
+
+# See it working
+
+https://dum-planet.de/quiz
